--- a/components/topBar/TopBar.module.css
+++ b/components/topBar/TopBar.module.css
@@ -52,7 +52,7 @@
   padding: 0px 20px;
 
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  margin-bottom: 95px;
+  /* margin-bottom: 95px; */
 }
 
 .mobileBottomActive {
